Adding an (empty) split normals layer to a newly created (empty) mesh triggers an assert in debugmode #107694

Closed
opened 2023-05-07 01:37:05 +02:00 by Martijn Versteegh · 3 comments

System Information
Operating system: Linux-5.15.0-71-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.105.17

Blender Version
Broken: version: 3.6.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: Unknown
Worked: 3.5.1

Short description of error

  • Start a debug build of blender 3.6 alpha
  • run the following script:
import bpy

me = bpy.data.meshes.new("")


me.normals_split_custom_set([])

the following assert will be triggered:

BLI_assert failed: source/blender/blenlib/intern/BLI_memarena.c:161, BLI_memarena_calloc(), at 'ptr != ((void *)0)'

I came across this while researching another bug.

**System Information** Operating system: Linux-5.15.0-71-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.105.17 **Blender Version** Broken: version: 3.6.0 Alpha, branch: Unknown, commit date: Unknown Unknown, hash: `Unknown` Worked: 3.5.1 **Short description of error** - Start a debug build of blender 3.6 alpha - run the following script: ```Py import bpy me = bpy.data.meshes.new("") me.normals_split_custom_set([]) ``` the following assert will be triggered: ``` BLI_assert failed: source/blender/blenlib/intern/BLI_memarena.c:161, BLI_memarena_calloc(), at 'ptr != ((void *)0)' ``` I came across this while researching another bug.
Martijn Versteegh added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-07 01:37:06 +02:00
Author
Member

My guess is this is cased by commit 3c43632651 @HooglyBoogly

My guess is this is cased by commit 3c4363265170 @HooglyBoogly
Iliya Katushenock added the
Interest
Modeling
Interest
Python API
labels 2023-05-07 01:49:06 +02:00
Hans Goudey self-assigned this 2023-05-07 02:52:48 +02:00
Member

Can confirm

Can confirm
Member

Should be fixed soon by #107592. If that doesn't move soon though I'll commit a temporary fix.

Should be fixed soon by #107592. If that doesn't move soon though I'll commit a temporary fix.
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-05-09 00:41:30 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-09 00:41:57 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107694
No description provided.