Fix #107694: Assert adding custom normals to empty mesh